[metadata]
name = bmautomation
version = 0.1.3.0
author = YuudachiXMMY
author_email = hwu9@uw.edu
description = An Automation Tool for Benchamarking Automation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YuudachiXMMY/BMAutomation
project_urls =
    Bug Tracker = https://github.com/YuudachiXMMY/BMAutomation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pywin32
    pyautogui
    uiautomation

[options.packages.find]
where = src